# oxiboard

./: Cargo.toml  README.md
src/: app.rs  board.rs  draw.rs  main.rs  oxiboard.glade
